src/objects/Ter_Acta_Encuesta__c.object
<CustomObject>
    <description>Este objeto contiene los registros de las actas asociadas a los clientes y las estaciones de servicio, también las encuestas asociadas a los casos.</description>
    <fields>
        <fullName>Actitud_de_servicio__c</fullName>
        <label>Actitud de servicio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ausencia_de_s_lidos_en_spill_container__c</fullName>
        <inlineHelpText>¿Verificar ausencia sólidos, combustible y agua?</inlineHelpText>
        <label>Ausencia de sólidos en spill container</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Baja_denominaci_n_cambiar_billetes__c</fullName>
        <inlineHelpText>¿Tiene el despachador dinero de baja denominación para cambiar billetes?</inlineHelpText>
        <label>¿Baja denominación cambiar billetes?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bit_cora_ambiental__c</fullName>
        <inlineHelpText>¿La estación aplica la bitácora ambiental y durante el recorrido en campo se evidencia su aplicación?</inlineHelpText>
        <label>Bitácora ambiental</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bocas_tanques_de_almacenamiento_cerradas__c</fullName>
        <inlineHelpText>¿Verificar que todas las bocas de los tanques estén cerradas con tapas y candado. ( las tapas  deben ser jaladas para su revisión)?</inlineHelpText>
        <label>Bocas tanques de almacenamiento cerradas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Botiqu_n__c</fullName>
        <inlineHelpText>¿La EDS tiene  botiquín de primeros auxilios con elementos vigentes, no tiene medicamentos y cuenta con: elementos de bioseguridad (gafas, guantes de látex, tapabocas, protección bucal)?</inlineHelpText>
        <label>Botiquín</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Break_away__c</fullName>
        <inlineHelpText>¿Existe break away y no tiene fisuras, grietas, presencia de goteos y fugas?</inlineHelpText>
        <label>Break away</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cables_sueltos__c</fullName>
        <inlineHelpText>¿No existen cables sueltos (al aire libre, sin tubos de protección) y todas las tomas eléctricas tiene tapas?</inlineHelpText>
        <label>Cables sueltos</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caja_contenedora_de_bombas__c</fullName>
        <inlineHelpText>¿Existencia de caja contenedora y la no presencia  de tubería de reserva abierta o cable de puesta a tierra atravesando la caja sin sello?</inlineHelpText>
        <label>Caja contenedora de bombas AI</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caja_de_conteci_n_de_equipos__c</fullName>
        <inlineHelpText>¿Existe caja contenedora en el equipo y no tiene  perforaciones, grietas, tubos de reserva abiertos, sus botas o empaques están bien instalados y cables de puesta a tierra no la están perforando?</inlineHelpText>
        <label>Caja de conteción de equipos</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caja_de_contenci_n_de_equipos__c</fullName>
        <inlineHelpText>¿No hay presencia de combustible, agua, fugas en conexiones, unidad de medida o flexos o residuos solidos?</inlineHelpText>
        <label>Caja de contención de equipos</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calibraci_n_equipos_de_despacho__c</fullName>
        <inlineHelpText>¿Evidenciar que la EDS cuente con un plan de mantenimiento que asegure la calibración de surtidores por lo menos 1 vez cada meses?</inlineHelpText>
        <label>Calibración equipos de despacho</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calidad_de_la_respuesta__c</fullName>
        <label>Calidad de la respuesta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calidad_prueba_fondo_del_tanque__c</fullName>
        <inlineHelpText>¿De acuerdo a la prueba de calidad en fondo del tanque este se encuentra claro, traslucido y brillante?</inlineHelpText>
        <label>Calidad prueba fondo del tanque</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canal_perimetral_zona_islas__c</fullName>
        <inlineHelpText>¿Verificar ausencia de residuos sólidos, combustible y el drenaje correcto del agua?</inlineHelpText>
        <label>Canal perimetral zona islas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capacitaci_n_primeros_auxilios__c</fullName>
        <inlineHelpText>¿El administrador  cuenta con capacitación en primeros auxilios (Certificado ARL o Bomberos)?</inlineHelpText>
        <label>Capacitación primeros auxilios</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capacitaci_n_trabajo_en_alturas__c</fullName>
        <inlineHelpText>¿Se cuenta con capacitación en trabajo en alturas para los funcionarios que cambian precios y se suben a los carrotanques para el recibo de producto. Se debe revisar el certificado de capacitación?</inlineHelpText>
        <label>Capacitación trabajo en alturas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capacitaci_n_uso_de_extintores__c</fullName>
        <inlineHelpText>¿Se cuenta con capacitación en el uso de extintores para emergencia y control de derrames. (Eje. En bomberos o capacitación de la ARL dan certificados de asistencia a cursos)?</inlineHelpText>
        <label>Capacitación uso de extintores</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Control_diario_de_inventarios__c</fullName>
        <inlineHelpText>¿Verificar si se lleva un control de inventarios diarios  donde se incluyen las alarmas cuando las perdidas de combustible son mayores al 0.3% de las ventas acumuladas?</inlineHelpText>
        <label>Control diario de inventarios</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Despachador_atento_durante_operaci_n__c</fullName>
        <inlineHelpText>¿ Está el despachador atento durante la operación de tanqueo?</inlineHelpText>
        <label>¿Despachador atento durante operación?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Despachadores_capacitados_en_el_CBT__c</fullName>
        <inlineHelpText>¿Se encuentran los despachadores capacitados en el CBT?</inlineHelpText>
        <label>¿Despachadores capacitados en el CBT?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Despachadores_divulgan_las_campa_as__c</fullName>
        <inlineHelpText>¿Los despachadores conocen y divulgan las campañas promocionales?</inlineHelpText>
        <label>¿Despachadores divulgan las campañas?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>El_despachador_cuidadoso_con_veh_culo__c</fullName>
        <inlineHelpText>¿ Es el despachador cuidadoso con el vehículo?</inlineHelpText>
        <label>¿ El despachador cuidadoso con vehículo?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>El_n_mero_de_despachadores_en_la_EDS__c</fullName>
        <inlineHelpText>¿El número de despachadores en la EDS es suficiente para prestar un buen servicio?</inlineHelpText>
        <label>¿El número de despachadores en la EDS?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>El_saludo_inicial_y_despedida_amable__c</fullName>
        <inlineHelpText>¿Es el saludo inicial y de despedida amable y cortés?</inlineHelpText>
        <label>¿El saludo inicial y despedida amable?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Elementos_de_protecci_n_personal__c</fullName>
        <inlineHelpText>¿Casco con barbuquejo, Gafas de seguridad (Requeridas para el descargue), guantes de protección, botas de seguridad (Uno por trabajador), protección respiratoria tipo cartucho para vapores de combustible?</inlineHelpText>
        <label>Elementos de protección personal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Elementos_puedan_caer_del_canopy__c</fullName>
        <inlineHelpText>¿No se encuentran elementos que puedan caer del canopy (cielo rasos, avisos,  lámparas, etc.)?</inlineHelpText>
        <label>Elementos puedan caer del canopy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Elementos_que_puedan_caer__c</fullName>
        <inlineHelpText>¿No se encuentran elementos que puedan caer (techos, avisos, cielos rasos, lámparas, etc.)?</inlineHelpText>
        <label>Elementos que puedan caer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entrega_recibo_al_final_del_servicio__c</fullName>
        <inlineHelpText>¿Entrega el recibo al final del servicio?</inlineHelpText>
        <label>¿Entrega recibo al final del servicio?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipo_de_repuesta_a_derrames__c</fullName>
        <inlineHelpText>¿Se cuenta con kit de derrames y tener material absorbente y barrera oleofílica?</inlineHelpText>
        <label>Equipo de repuesta a derrames</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Est_el_canopy_en_buen_estado__c</fullName>
        <inlineHelpText>¿Está el canopy en buen estado?</inlineHelpText>
        <label>¿Está el canopy en buen estado?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Est_n_las_canecas_de_basura_limpias__c</fullName>
        <inlineHelpText>¿Están las canecas de basura limpias y en buen estado?</inlineHelpText>
        <label>¿Están las canecas de basura limpias?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existe_buena_se_alizaci_n_informativa__c</fullName>
        <inlineHelpText>¿Existe una buena señalización informativa de marketing?</inlineHelpText>
        <label>¿Existe buena señalización informativa?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existe_extintor_en_distintas_reas_EDS__c</fullName>
        <inlineHelpText>¿Existe un extintor en las distintas áreas de la EDS?</inlineHelpText>
        <label>¿Existe extintor en distintas áreas EDS?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existe_se_alizaci_n_promocional__c</fullName>
        <inlineHelpText>¿Existe una buena señalización promocional de marketing?</inlineHelpText>
        <label>¿Existe señalización promocional?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extintores__c</fullName>
        <inlineHelpText>¿Existencia de dos  extintores de 10 Kg ( 20 lb) cargados y vigentes en la oficina de administración de la estación de servicio?</inlineHelpText>
        <label>Extintores</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forro_pistolas__c</fullName>
        <inlineHelpText>¿Tienen el forro del color del producto (rojo: corriente, azul: Extra, amarillo: diésel)?</inlineHelpText>
        <label>Forro pistolas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fugas_en_codo_giratorio__c</fullName>
        <inlineHelpText>¿Detección de fugas?</inlineHelpText>
        <label>Fugas en codo giratorio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fugas_en_v_lvula_de_impacto__c</fullName>
        <inlineHelpText>¿No hay fugas en la válvula de impacto y la palanca de activación esta bien sujeta sin alambres, cuerdas etc.?</inlineHelpText>
        <label>Fugas en válvula de impacto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Imagen_GNV__c</fullName>
        <label>Imagen (GNV)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Imagen_L_quidos__c</fullName>
        <label>Imagen (Líquidos)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Imagen_corporativa__c</fullName>
        <label>Imagen corporativa</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Instalaciones_el_ctricas__c</fullName>
        <inlineHelpText>¿No existen instalaciones eléctricas con enmendaduras o añadiduras, cables sueltos  o tubería eléctrica abierta  en la zona de islas?</inlineHelpText>
        <label>Instalaciones eléctricas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lubricantes_l_quidos_buena_exhibici_n__c</fullName>
        <inlineHelpText>¿Hay surtido de lubricantes y otros líquidos con buena exhibición?</inlineHelpText>
        <label>¿Lubricantes líquidos buena exhibición?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manejo_de_residuos__c</fullName>
        <inlineHelpText>¿Existencia de caseta de residuos peligrosos?</inlineHelpText>
        <label>Manejo de residuos</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mantenimiento_de_tanques__c</fullName>
        <inlineHelpText>¿La EDS debe contar con evidencias de un plan de mantenimiento de lavado de tanques anual. (Recomendación, puesto que va a entrar en reglamentación de calidad)?</inlineHelpText>
        <label>Mantenimiento de tanques</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Negocios_complementarios_y_convenios__c</fullName>
        <label>Negocios complementarios y convenios</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones__c</fullName>
        <label>Observaciones</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_aspectos_fisicos_EDS__c</fullName>
        <inlineHelpText>Observaciones aspectos físicos EDS</inlineHelpText>
        <label>Observaciones aspectos físicos EDS</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_despachadores__c</fullName>
        <inlineHelpText>Observaciones despachadores</inlineHelpText>
        <label>Observaciones despachadores</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_varios__c</fullName>
        <inlineHelpText>Observaciones varios</inlineHelpText>
        <label>Observaciones varios</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ofrece_despachador_limpieza_de_vidrios__c</fullName>
        <inlineHelpText>¿Ofrece el despachador limpieza de vidrios y lubricantes a los clientes?</inlineHelpText>
        <label>¿Ofrece despachador limpieza de vidrios?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oportunidad_de_la_respuesta__c</fullName>
        <label>Oportunidad de la respuesta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POS_e_impresoras_funcionando__c</fullName>
        <inlineHelpText>¿Están todos los POS e impresoras funcionando?</inlineHelpText>
        <label>¿POS e impresoras funcionando?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parada_de_emergencia__c</fullName>
        <inlineHelpText>¿Verificación de la existencia de la  parada de emergencia visible, señalizada y de fácil acceso?</inlineHelpText>
        <label>Parada de emergencia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>